# mkdocs-color-swatch-plugin

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/: release.yml
.github/workflows/: build.yml  docs.yml  test.yml
docs/: index.md
mkdocs_color_swatch_plugin/: color_swatch.py  plugin.py
mkdocs_color_swatch_plugin/assets/: color-swatch.js
tests/: test_render.py
