[project]
name = "mkdocs-color-swatch-plugin"
version = "0.3.1"
description = "A MkDocs plugin for inline color swatches with tooltip and hover effects"
authors = [
    { name = "Fabian Eulitz", email = "dev@sustineo.de" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["mkdocs", "plugin", "markdown", "color", "tooltip"]

requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.1,<2.0.0",
    "markdown>=3.8,<4.0",
    "beautifulsoup4>=4.13.4,<5.0.0",
]

[project.urls]
Repository = "https://github.com/fabieu/mkdocs-color-swatch-plugin"

[project.entry-points."mkdocs.plugins"]
color-swatch = "mkdocs_color_swatch_plugin.plugin:ColorSwatchPlugin"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
